fix darkmode css and add invisible library menu

--- a/hackerspace/Website/static/css/header.css
+++ b/hackerspace/Website/static/css/header.css
@@ -24,19 +24,26 @@
     -webkit-animation-iteration-count: infinite;
 }
 
+.header_image.donation_footer {
+    background-image: -webkit-gradient(linear, left top, left bottom, from(hsla(0, 0%, 100%, 0.5)), to(#fff)), url('../images/header_banner.jpg');
+    background-image: linear-gradient(180deg, hsla(0, 0%, 1000%, 0.5), rgb(255, 255, 255)), url('../images/header_banner.jpg');
+    background-position: 0px 0px, 0% 50%;
+}
 
 @media (prefers-color-scheme: dark) {
     .header_image {
         background-image: -webkit-gradient(linear, left top, left bottom, from(hsla(0, 0%, 0%, 0.5)), to(hsla(0, 0%, 0%, 0.5))), url('../images/header_banner.jpg');
         background-image: linear-gradient(180deg, hsla(0, 0%, 0%, 0.5), hsla(0, 0%, 0%, 0.5)), url('../images/header_banner.jpg');
     }
+
+    .header_image.donation_footer {
+        background-image: -webkit-gradient(linear, left top, left bottom, from(hsla(0, 0%, 0%, 0.65)), to(#fff)), url('../images/header_banner.jpg');
+        background-image: linear-gradient(180deg, hsla(0, 0%, 0%, 0.65), rgb(0, 0, 0)), url('../images/header_banner.jpg');
+        background-position: 0px 0px, 0% 50%;
+    }
 }
 
-.header_image.donation_footer {
-    background-image: -webkit-gradient(linear, left top, left bottom, from(hsla(0, 0%, 0%, 0.65)), to(#fff)), url('../images/header_banner.jpg');
-    background-image: linear-gradient(180deg, hsla(0, 0%, 0%, 0.65), rgb(0, 0, 0)), url('../images/header_banner.jpg');
-    background-position: 0px 0px, 0% 50%;
-}
+
 
 /* Safari 4.0 - 8.0 */
 @-webkit-keyframes header_image {
